2007-08-29  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #301263 (bnc)
	* calendar/e-cal-backend-exchange.c: (open_calendar):
	If the folder is not found, check if its present in the 
	foriegn hierarchy/directories.	

2007-08-27  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS, configure.in: Evolution Exchange 2.11.91 release

2007-08-24  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #455858 by Damien Carbery

	* camel/camel-exchange-summary.c:
	Change __PRETTY_FUNCTION__ to G_GNUC_PRETTY_FUNCTION.

2007-08-17  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #332979

	* addressbook/e-book-backend-gal.c: (ldap_search_dtor),
	(start_book_view), (stop_book_view): Fixes a GAL Synchronization issue
	while doing autocompletion.

2007-08-16  Matthew Barnes  <mbarnes@redhat.com>

	* addressbook/e-book-backend-gal.c (load_source):
	Fix compilation errors caused by glibc's new "open" macro (#466987).

2007-08-16  Sankar P  <psankar@novell.com>

	reviewed by: Srinivasa Ragavan <sragavan@novell.com>

	** Fix for bug #466502

	* camel/camel-exchange-provider.c:
	Fixes the problem of "Check in all folders"
	displayed twice.

2007-08-13  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS: Update translation updates

2007-08-13  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS, configure.in: Evolution Exchange 2.11.90 release

2007-08-09  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #464989

	* addressbook/e-book-backend-exchange.c:
	(e_book_backend_exchange_get_contact): Allow only uri based UIDs to be
	searched.

2007-08-08  Srinivasa Ragavan  <sragavan@novell.com>

	* addressbook/e-book-backend-gal.c: (dosearch): Fix for partial GAL
	retrieval.

2007-08-08  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #464639

	* addressbook/e-book-backend-exchange.c:
	(e_book_backend_exchange_get_contact): Implement the get_contact
	handler for remote mode.

2007-08-07  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #347930
