@@ -1,3 +1,12 @@
+2007-08-30  Srinivasa Ragavan  <sragavan@novell.com>
+
+	** Fix for bug #467591 and bug #464404
+
+	* addressbook/e-book-backend-exchange.c
+	(e_book_backend_exchange_create_contact): Connect if there is no
+	account before anything else.
+	(e_book_backend_exchange_modify_contact):
+
 2007-08-29  Chenthill Palanisamy  <pchenthill@novell.com>
 
 	Fixes #301263 (bnc)
